--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <main id="main">
     <div style="padding: 50px; text-align:center;">		
-      <h3 id="title">Sorry we could not find what you were looking for.<br/><a href="{{ "" | relURL }}"><i>Click here for the home page</i></a></h3>
+      <h3 id="title">Error 404. Sorry we could not find what you were looking for.<br/><a href="{{ "" | relURL }}"><i>Click here to go back to the home page</i></a></h3>
     </div>
   </main>
 {{ end }}
