Update URLs in index.html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -120,7 +120,7 @@
                                         </ul>
                                     </div>
                                     <div class="pricing-table-cta is-revealing">
-                                        <a class="button button-primary button-shadow button-block" href="#">{{ .ButtonCaption }}</a>
+                                        <a class="button button-primary button-shadow button-block" href="mailto:contact@securelayer.co">{{ .ButtonCaption }}</a>
                                     </div>
                                 </div>
                             </div> 
