--- a/layouts/index.html
+++ b/layouts/index.html
@@ -96,7 +96,7 @@
 				<div class="section-square"></div>
 				<div class="container">
 					<div class="pricing-inner section-inner has-top-divider">
-                        <h2 class="section-title mt-0 text-center">Pricing</h2>
+                        <h2 class="section-title mt-0 text-center">Our Plans</h2>
                         <div class="pricing-tables-wrap">
 							{{ range site.Params.pricing }}
                             <div class="pricing-table">
